plugins {
    id 'java-library'
    id 'groovy'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    implementation project(':shared')
    testImplementation testFixtures(project(':shared'))

    implementation 'com.azure:azure-storage-blob:12.25.2'
    implementation 'com.azure:azure-identity:1.11.4'

    testImplementation 'org.apache.groovy:groovy:4.0.20'
    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
    testImplementation 'com.openpojo:openpojo:0.9.1'
    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.15.8'
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.90
            }
        }
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: rootProject.ext.jacoco_excludes)
        }))
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: rootProject.ext.jacoco_excludes)
        }))
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
